log-output/manifests/workload.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: viktormandlbauer/log-output:1.7
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /status
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /status
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
